# xhydro-lstm

./: .cruft.json  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .zenodo.json  AUTHORS.rst  CHANGELOG.rst  CITATION.cff  CONTRIBUTING.rst  LICENSE  Makefile  README.rst  environment-dev.yml  environment-docs.yml  pyproject.toml  tox.ini  tox.toml
.github/: ISSUE_TEMPLATE.md  labeler.yml
.github/ISSUE_TEMPLATE/: 0001-GENERIC-ISSUE-TEMPLATE.yml  0002-BUG-REPORT.yml  0003-FEATURE-REQUEST.yml  0004-QUESTION-SUPPORT.yml
.github/workflows/: auto-accept-ci-changes.yml  bump-version.yml  cache-cleaner.yml  dependency-review.yml  first-pull-request.yml  label.yml  main.yml  publish-pypi.yml  scorecard.yml  tag-testpypi.yml  workflow-warning.yml
CI/: requirements_ci.in  requirements_ci.txt
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  releasing.rst  usage.rst
docs/notebooks/: lstm.ipynb
src/xhydro_lstm/: LSTM_static.py  __init__.py  create_datasets.py  lstm_controller.py  lstm_functions.py  lstm_static.py
tests/: __init__.py  test_lstm.py  test_xhydro_lstm.py
