[build-system]
requires = ["flit_core >=3.9,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "xhydro-lstm"
authors = [
  {name = "Richard Arsenault", email = "Richard.Arsenault@etsmtl.ca"}
]
maintainers = [
  {name = "Richard Arsenault", email = "Richard.Arsenault@etsmtl.ca"},
  {name = "Trevor James Smith", email = "smith.trevorj@ouranos.ca"},
  {name = "Gabriel Rondeau-Genesse", email = "rondeau-genesse.gabriel@ouranos.ca"}
]
readme = {file = "README.rst", content-type = "text/x-rst"}
requires-python = ">=3.8.0"
keywords = ["xhydro-lstm"]
license = {file = "LICENSE"}
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython"
]
dynamic = ["description", "version"]
dependencies = []

[project.optional-dependencies]
dev = [
  # Dev tools and testing
  "pip >=23.3.0",
  "bump-my-version >=0.18.3",
  "watchdog >=3.0.0",
  "flake8 >=6.1.0",
  "flake8-alphabetize >=0.0.21",
  "flake8-rst-docstrings >=0.3.0",
  "flit >=3.9.0",
  "tox >=4.5.1",
  "coverage >=7.0.0",
  "coveralls >=3.3.1",
  "mypy",
  "pytest >=7.3.1",
  "pytest-cov >=4.0.0",
  "black ==24.4.2",
  "blackdoc ==0.3.9",
  "isort ==5.13.2",
  "ruff >=0.3.0",
  "pre-commit >=3.3.2"
]
docs = [
  # Documentation and examples
  "sphinx >=7.0.0",
  "sphinx-codeautolink",
  "sphinx-copybutton",
  "sphinx-intl",
  "sphinx-rtd-theme >=1.0",
  "nbsphinx",
  "pandoc",
  "ipython",
  "ipykernel",
  "jupyter_client"
]
all = ["xhydro-lstm[dev]", "xhydro-lstm[docs]"]

[project.urls]
# "Homepage" = "https://xhydro_lstm.readthedocs.io/"
# "Changelog" = "https://xhydro_lstm.readthedocs.io/en/stable/history.html"
# "About Ouranos" = "https://www.ouranos.ca/en/"
"Issue tracker" = "https://github.com/hydrologie/xhydro-lstm/issues"
"changelog" = "https://github.com/hydrologie/xhydro-lstm/blob/main/CHANGELOG.rst"
"homepage" = "https://github.com/hydrologie/xhydro-lstm"

[tool]

[tool.black]
target-version = [
  "py38",
  "py39",
  "py310",
  "py311",
  "py312"
]

[tool.bumpversion]
current_version = "0.1.0"
commit = true
commit_args = "--no-verify"
tag = false
tag_name = "v{new_version}"
allow_dirty = true
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)(\\-(?P<release>[a-z]+)(\\.(?P<build>\\d+)))?"
serialize = [
  "{major}.{minor}.{patch}-{release}.{build}",
  "{major}.{minor}.{patch}"
]

[[tool.bumpversion.files]]
filename = "src/xhydro_lstm/__init__.py"
search = "__version__ = \"{current_version}\""
replace = "__version__ = \"{new_version}\""

[[tool.bumpversion.files]]
filename = "tests/test_xhydro_lstm.py"
search = "__version__ = \"{current_version}\""
replace = "__version__ = \"{new_version}\""

[[tool.bumpversion.files]]
filename = ".cruft.json"
search = "\"version\": \"{current_version}\""
replace = "\"version\": \"{new_version}\""

[tool.bumpversion.parts.build]
independent = false

[tool.bumpversion.parts.release]
optional_value = "release"
values = [
  "dev",
  "release"
]

[tool.coverage.run]
relative_files = true
include = ["src/xhydro_lstm/*"]
omit = ["tests/*.py"]

[tool.flit.sdist]
include = [
  ".zenodo.json",
  "AUTHORS.rst",
  "CHANGELOG.rst",
  "CONTRIBUTING.rst",
  "LICENSE",
  "Makefile",
  "README.rst",
  "environment-dev.yml",
  "environment-docs.yml",
  "docs/_static/_images/*.gif",
  "docs/_static/_images/*.jpg",
  "docs/_static/_images/*.png",
  "docs/_static/_images/*.rst",
  "docs/Makefile",
  "docs/conf.py",
  "docs/make.bat",
  "src/xhydro_lstm",
  "tests/*.py",
  "tox.ini"
]
exclude = [
  "*.py[co]",
  "__pycache__",
  ".coveralls.yml",
  ".editorconfig",
  ".flake8",
  ".gitignore",
  ".pre-commit-config.yaml",
  ".readthedocs.yml",
  ".yamllint.yaml",
  "docs/_*",
  "docs/apidoc/modules.rst",
  "docs/apidoc/xhydro_lstm*.rst",
  "docs/locales"
]

[tool.isort]
profile = "black"
py_version = 38

[tool.mypy]
files = "."
python_version = 3.9
show_error_codes = true
strict = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
  # Don't require test functions to include types
  "tests.*"
]
allow_untyped_defs = true
disable_error_code = "attr-defined"
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = [
  "--verbose",
  "--color=yes"
]
filterwarnings = ["ignore::UserWarning"]
testpaths = "tests"

[tool.ruff]
src = ["xhydro_lstm"]
line-length = 150
target-version = "py38"
exclude = [
  ".eggs",
  ".git",
  "build",
  "docs"
]

[tool.ruff.format]
line-ending = "auto"

[tool.ruff.lint]
ignore = [
  "D205",
  "D400",
  "D401"
]
select = [
  "C9",
  "D",
  "E",
  "F",
  "W"
]

[tool.ruff.lint.flake8-bandit]
check-typed-exception = true

[tool.ruff.lint.isort]
known-first-party = ["xhydro_lstm"]
case-sensitive = true
detect-same-package = false
lines-after-imports = 1
no-lines-before = ["future", "standard-library"]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.per-file-ignores]
"docs/**" = ["E402"]
"src/xhydro_lstm/**/__init__.py" = ["F401", "F403"]

[tool.ruff.lint.pycodestyle]
max-doc-length = 180

[tool.ruff.lint.pydocstyle]
convention = "numpy"
